Bug 1396041 - Disassociate element from document before destroying animations in UnbindFromTree(). r=birtles

This allows us to avoid posting animation-related restyles when removing
elements from the document tree.

MozReview-Commit-ID: CzN4S0DTUMa